--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <i class='bx bxs-phone-call contact_icon'></i>086-9456983
                     </div>
                     <div class="contact1">
-                        <i class='bx bx-envelope contact_icon'></i><a class="linkmail" href="mailto:witwawit5@gmail.com">witwawit5@gmail.comm</a>
+                        <i class='bx bx-envelope contact_icon'></i><a class="linkmail" href="mailto:witwawit5@gmail.com">witwawit5@gmail.com</a>
                     </div>
                 </div>
             </div>
