--- a/portprofile.html
+++ b/portprofile.html
@@ -71,25 +71,25 @@
                                     <span class="skills__circle"></span>CSS
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Photoshop
+                                    <span class="skills__circle"></span>Javascript
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>After Effects
+                                    <span class="skills__circle"></span>Microsoft SQL
                                 </li>
                             </ul>
     
                             <ul class="skills__data">
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>InDesign
+                                    <span class="skills__circle"></span>Photoshop
                                 </li>
                                 <li class="skills__name">
                                     <span class="skills__circle"></span>Illustrator
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Premier Pro
+                                    <span class="skills__circle"></span>After Effects
                                 </li>
                                 <li class="skills__name">
-                                    <span class="skills__circle"></span>Adobe Flash
+                                    <span class="skills__circle"></span>Premiere Pro
                                 </li>
                             </ul>
                         </div>
@@ -120,8 +120,8 @@
                                 <span class="interest__name">Music</span>
                             </div>
                             <div class="interest__content">
-                                <i class="bx bxs-plane-alt interest__icon"></i>
-                                <span class="interest__name">Travel</span>
+                                <i class="bx bxs-camera interest__icon"></i>
+                                <span class="interest__name">Photography</span>
                             </div>
                         </div>
                     </section>
