--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="column right">
                         <div class="text">I'm Wachirawit <span>Khantipanthukul</span></div>
                         <p>สวัสดีครับ ผมชื่อนายวชิรวิทย์ ขันติพันธุกุล ชื่อเล่น วิทย์ อายุ 21 ปี ปัจจุบันกำลังศีกษาอยู่ชั้นปีที่ 3 คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี สาขาวิทยาการคอมพิวเตอร์ประยุกต์-มัลติมีเดีย มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี ผมมีความสนใจในการออกแบบและศึกษาการเขียนเว็บไซต์ด้วยภาษา HTML , CSS และยังมีความสนใจในอาชีพด้าน Front-end Developer จึงได้จัดทำแฟ้มรวบรวมผลงานนี้ขึ้นเพื่อใช้ประกอบการยื่นสมัครฝึกงาน</p><br>
-                        <p>Hello, My name is Wachirawit Khantipanthukul  My Nickname is Wit I am 20 years old. Now I'm studying in Bachelor's degree of Applied Computer Science - Multimedia at King Mongkut's University of Technology Thomburi. I'm Interested in Website Edit with HTML , CSS languange And I am interested in Front-end Developer too, So I made this portfolio for an internship</p>
+                        <p>Hello, My name is Wachirawit Khantipanthukul  My Nickname is Wit I'm 21 years old. Now I'm studying 3rd year in Bachelor's degree of Applied Computer Science - Multimedia at King Mongkut's University of Technology Thomburi. I'm Interested in Website Edit with HTML , CSS languange And I am interested in Front-end Developer too, So I made this portfolio for an internship</p>
                         <a href="portprofile.html">Read More</a>
                     </div>
                 </div>
@@ -89,8 +89,8 @@
                     <div class="card"><a href="portphoto.html">
                         <div class="box">
                             <i class='bx bxs-camera' ></i>
-                            <div class="text">Photography</div>
-                            <p>ผลงานการถ่ายภาพต่างๆ</p><br><br>
+                            <div class="text">Photo & Video</div>
+                            <p>ผลงานการถ่ายภาพและวิดีโอ</p><br><br>
                         </div>
                     </a>
                     </div>
