--- a/portphoto.html
+++ b/portphoto.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <title>: : My Photography : :</title>
+    <title>: : My Gallery : :</title>
 </head>
 
 <body>
@@ -34,8 +34,36 @@
         <section class="home" id="home">
             <div class="max-width">
                 <div class="home-content">
-                    <div class="text-1">Pictures &<span> Photography</span></div>
+                    <div class="text-1">Pictures &<span> Videos</span></div>
                 </div>
+            </div>
+        </section>
+
+        <section class="video1" id="video1">
+            <div class="max-width">
+                <h1 class="title">Mirror Room Music Video</h2>
+                <div class="containerss">
+                    <iframe width="1000" height="566" src="https://www.youtube.com/embed/1ff9PQh3yqM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <h2 style="margin-top: 0;margin-bottom: 40px;">Behind The Scence</h2>
+                <div class="containerss">
+                    <iframe width="1000" height="566" src="https://www.youtube.com/embed/mek6fx26BTM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="containerss">
+                    <p>MV ห้องกระจก เป็น MV ในรายวิชา CMM Production ซึ่งในทีมถ่ายทำจะเน้น MV ไปในโทนสีอบอุ่นเพื่อให้รู้สึกถึงภาพแนวสบายตา และแนว MV ที่มีความจริงจัง เนื้อหาใน MV จะสื่อถึงตัวพระเอกที่เคยมีคนรัก และรู้สึกผูกพันธ์ จนทั้งสองก็เลิกรากัน แต่ตัวพระเอกก็ยังไม่สามารถตัดใจได้ เหมือนกับการติดอยู่ในห้องกระจอกห้องหนึ่งที่มองเห็นเพียงสิ่งที่ตัวเองทำลงไป และจมอยู่กับความเสียใจนั้น ไม่สามารถก้าวออกมาได้</p>
+                </div>
+                <h2>ภาพบรรยากาศการถ่ายทำ</h2>
+                <div class="container-pic">
+                    <a href="img/mirror1.JPG"><img src="img/mirror1.JPG"></a>
+                    <a href="img/mirror2.JPG"><img src="img/mirror2.JPG"></a>
+                </div><br><br>
+                <div class="container-pic">
+                    <a href="img/mirror3.JPG"><img src="img/mirror3.JPG"></a>
+                    <a href="img/mirror4.JPG"><img src="img/mirror4.JPG"></a>
+                </div>
+                <h2>My Responsibility</h2>
+                <p>- Story Board</p>
+                <p>- Camera Man (Main Camera)</p>
             </div>
         </section>
     
