--- a/portprofile.html
+++ b/portprofile.html
@@ -196,6 +196,11 @@
                                 <h3 class="cert__title">Certificate of Game Create</h3>
                                 <p class="cert_descrip">ได้รับรางวัลเหรียญทอง รองชนะเลิศ การแข่งขันศิลปะหัตถกรรม ระดับประเทศ หัวข้อการสร้างเกมสร้างสรรค์จากคอมพิวเตอร์ ด้วยโปรแกรม AdobeFlash และเขียนคำสั่งด้วย ActionScript เพื่อใช้ใน flash game (2018)</p>
                             </div>
+                            <div class="cert_content">
+                                <h3 class="cert__title">Certificate of Internship at Globish</h3>
+                                <p class="cert_descrip">
+                                    ใบรับรองการฝึกงานกับ Globish Academia ในตำแหน่ง Front-end Developer ระยะเวลา 2เดือน สร้างโครงการฝึกงานชื่อ "Coach Community Forums" เพื่อใช้สำหรับการสื่อสารกับอีกโค้ชด้วยกันและสร้างกระทู้ความคิดเห็น (2021)</p>
+                            </div>
                         </div>
                     </section>
     
