--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     <title>: : : Wachirawit's Portfolio : : :</title>
 </head>
 
+<script>
+    $(window).on("load",function(){
+     $(".loader-wrapper").fadeOut("slow");
+});
+</script>
+
 <body>
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+    
     <div class="first">
         <nav class="navbar">
             <div class="max-width">
