--- a/portprofile.html
+++ b/portprofile.html
@@ -11,7 +11,17 @@
     <title>: : My Profile : :</title>
 </head>
 
+<script>
+    $(window).on("load",function(){
+     $(".loader-wrapper").fadeOut("slow");
+});
+</script>
+
 <body>
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+    
     <div class="first">
         <main class="l-main bd-container">
             <div class="resume">
