--- a/portmag.html
+++ b/portmag.html
@@ -11,8 +11,17 @@
     <title>: : Magazine Design : :</title>
 </head>
 
-<body>
+<script>
+    $(window).on("load",function(){
+     $(".loader-wrapper").fadeOut("slow");
+});
+</script>
 
+<body>
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+    
     <div class="first">
         <nav class="navbar">
             <div class="max-width">
