--- a/portproduct.html
+++ b/portproduct.html
@@ -11,7 +11,18 @@
     <title>: : Video Production : :</title>
 </head>
 
+<script>
+    $(window).on("load",function(){
+     $(".loader-wrapper").fadeOut("slow");
+});
+</script>
+
 <body>
+
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+    
    <div class="first">
     <nav class="navbar">
         <div class="max-width">
