--- a/portcode.html
+++ b/portcode.html
@@ -39,14 +39,15 @@
         <section class="video0" id="video0">
             <div class="max-width">
                 <h1 class="title">Coach Community Website</h2>
+                    <p>โปรเจคของเว็บไซต์นี้ มีชื่อว่า Coach Communtity Forums ซึ่งเป็นโปรเจคในการฝึกงานชั้นปีที่ 2 ของบริษัท โกลบิช อคาเดเมีย (Globish Academia) สร้างด้วยภาษา HTML, CSS, JS ผ่านทาง Vue JS Framework, Bootstrap และGithub  โดยโปรเจคนี้มีจุดประสงค์สำหรับการตั้งและตอบคำถามของโค้ชสอนภาษาอังกฤษผ่านทางกระทู้ โดยจะมีส่วนที่เป็นแอดมิน(Admin) และส่วนที่เป็นผู้ใช้งาน(Coach) ระบบนี้จะหลายระบบด้วยกันได้แก่ ระบบล็อกอิน สมัครสมาชิก ลืมรหัสผ่าน ยืนยันรหัสผ่านด้วยอีเมล , ระบบการสร้างกระทู้และคอมเมนท์ด้วย Text Editor , ระบบAccount การตั้งชื่อ ตั้งรูปโปรไฟล์ และระบบ Admin ที่จะคอยปักหมุดกระทู้ให้แสดงบนหน้าเว็บไซต์ อนุมัติการสร้างกระทู้ เป็นต้น โดยระยะเวลาในการสร้างโปรเจคใช้เวลาประมาณ 2 เดือน (1 มิถุนายน 2564 - 30 กรกฏาคม 2564)</p>
                     <h2>Example Interface</h2>
                     <div class="containerp">
-                        <a class="interncontainer" href="img/intern.png"><img src="img/intern.png"></a>
-                        <a class="interncontainer" href="img/intern4.png"><img src="img/intern4.png"></a>
+                        <a class="interncontainer" href="img/intern.png"><img class="shadow" src="img/intern.png"></a>
+                        <a class="interncontainer" href="img/intern4.png"><img class="shadow" src="img/intern4.png"></a>
                     </div>
                     <div class="containerp">
-                        <a class="interncontainer" href="img/intern2.png"><img src="img/intern2.png"></a>
-                        <a class="interncontainer" href="img/intern3.png" style="margin-bottom: 0;"><img src="img/intern3.png"></a>
+                        <a class="interncontainer" href="img/intern2.png"><img class="shadow" src="img/intern2.png"></a>
+                        <a class="interncontainer" href="img/intern3.png" style="margin-bottom: 0;"><img class="shadow" src="img/intern3.png"></a>
                     </div>
                     <h2>My Duty</h2>
                     <p>- Front-End Developer</p>
@@ -76,8 +77,32 @@
                     </div>
                     <h2>Certificate</h2>
                     <div class="containerp">
-                        <a style="border: 1px solid black;" href="img/internC.png"><img src="img/internC.png"></a>
+                        <a href="img/internC.png"><img class="shadow" src="img/internC.png"></a>
                     </div>
+            </div>
+        </section>
+
+        <section class="video1-1" id="video1">
+            <div class="max-width">
+                <h1 class="title">Moderno Website</h2>
+                    <div class="container">
+                        <iframe width="1000" height="566" src="https://www.youtube.com/embed/LWIkMARGW9k"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="container">
+                        <p>Moderno Website เป็นโปรเจคในรายวิชา CMM367 Web Dev II มีจุดประสงค์เพื่อทำให้นักศึกษาทำเว็บไซต์ด้วยภาษา asp.net และใช้ฐานข้อมูลร่วมกับ Microsoft My SQL เป็นหลัก โดยในหน้าเว็บไซต์จะมีการแสดงผลสินค้า มีการกรอกข้อมูลการค้นหาผ่านหน้าเว็บไซต์เพื่อให้แสดงผลสินค้าที่ต้องการ มีการInteractive กับผู้ใช้โดยจะมีการให้ผู้ใช้ ติดต่อมาในส่วนของ Contact ได้หากม่ข้อสงสัย และมีการจัดการหน้าเว็บในส่วนของ Backend โดยระบบจะทำการ ให้ผู้ใช้ Login และตรวจสอบว่าเป็น Admin จริงๆหรือไม่ หากใช่ ระบบก็จะนำผู้ใช้ไปยังส่วนของการจัดการฐานข้อมูลผ่านทางเว็บไซต์ และที่สำคัญยังเป็นเว็บไซต์แบบ Responsive รองรับทุกขนาดหน้าจออีกด้วย</p>
+                    </div>
+                    <h2>Example Interface</h2>
+                    <div class="container-pic">
+                        <a href="img/moder1.png"><img class="shadow" src="img/moder1.png"></a>
+                        <a href="img/moder2.png"><img class="shadow" src="img/moder2.png"></a>
+                    </div><br><br>
+                    <div class="container-pic">
+                        <a href="img/moder3.png"><img class="shadow" src="img/moder3.png"></a>
+                        <a href="img/moder4.png"><img class="shadow" src="img/moder4.png"></a>
+                    </div>  
             </div>
         </section>
 
