--- a/portphoto.html
+++ b/portphoto.html
@@ -49,7 +49,7 @@
                     <iframe width="1000" height="566" src="https://www.youtube.com/embed/mek6fx26BTM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="containerss">
-                    <p>MV ห้องกระจก เป็น MV ในรายวิชา CMM Production ซึ่งในทีมถ่ายทำจะเน้น MV ไปในโทนสีอบอุ่นเพื่อให้รู้สึกถึงภาพแนวสบายตา และแนว MV ที่มีความจริงจัง เนื้อหาใน MV จะสื่อถึงตัวพระเอกที่เคยมีคนรัก และรู้สึกผูกพันธ์ จนทั้งสองก็เลิกรากัน แต่ตัวพระเอกก็ยังไม่สามารถตัดใจได้ เหมือนกับการติดอยู่ในห้องกระจอกห้องหนึ่งที่มองเห็นเพียงสิ่งที่ตัวเองทำลงไป และจมอยู่กับความเสียใจนั้น ไม่สามารถก้าวออกมาได้</p>
+                    <p>MV ห้องกระจก เป็น MV ในรายวิชา CMM Production ซึ่งในทีมถ่ายทำจะเน้น MV ไปในโทนสีอบอุ่นเพื่อให้รู้สึกถึงภาพแนวสบายตา และแนว MV ที่มีความจริงจัง เนื้อหาใน MV จะสื่อถึงตัวพระเอกที่เคยมีคนรัก และรู้สึกผูกพันธ์ จนทั้งสองก็เลิกรากัน แต่ตัวพระเอกก็ยังไม่สามารถตัดใจได้ เหมือนกับการติดอยู่ในห้องกระจกห้องหนึ่งที่มองเห็นเพียงสิ่งที่ตัวเองทำลงไป และจมอยู่กับความเสียใจนั้น ไม่สามารถก้าวออกมาได้</p>
                 </div>
                 <h2>ภาพบรรยากาศการถ่ายทำ</h2>
                 <div class="container-pic">
