--- a/portcode.html
+++ b/portcode.html
@@ -105,7 +105,7 @@
                             มีจุดประสงค์เพื่อทำให้นักศึกษาทำเว็บไซต์ด้วยภาษา asp.net และใช้ฐานข้อมูลร่วมกับ Microsoft My
                             SQL เป็นหลัก โดยในหน้าเว็บไซต์จะมีการแสดงผลสินค้า
                             มีการกรอกข้อมูลการค้นหาผ่านหน้าเว็บไซต์เพื่อให้แสดงผลสินค้าที่ต้องการ มีการInteractive
-                            กับผู้ใช้โดยจะมีการให้ผู้ใช้ ติดต่อมาในส่วนของ Contact ได้หากม่ข้อสงสัย
+                            กับผู้ใช้โดยจะมีการให้ผู้ใช้ ติดต่อมาในส่วนของ Contact ได้หากมีข้อสงสัย
                             และมีการจัดการหน้าเว็บในส่วนของ Backend โดยระบบจะทำการ ให้ผู้ใช้ Login และตรวจสอบว่าเป็น
                             Admin จริงๆหรือไม่ หากใช่ ระบบก็จะนำผู้ใช้ไปยังส่วนของการจัดการฐานข้อมูลผ่านทางเว็บไซต์
                             และที่สำคัญยังเป็นเว็บไซต์แบบ Responsive รองรับทุกขนาดหน้าจออีกด้วย</p>
