--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="home-content">
                     <div class="text-1">This is My Portfolio</div>
                     <div class="text-2">Wachirawit Khantipanthukul</div>
-                    <div class="text-3">Born to be <span>Front-end Developer.</span></div>
+                    <div class="text-3">Born to be <span>Developer.</span></div>
                 </div>
             </div>
         </section>
@@ -50,8 +50,8 @@
                     </div>
                     <div class="column right">
                         <div class="text">I'm Wachirawit <span>Khantipanthukul</span></div>
-                        <p>สวัสดีครับ ผมชื่อนายวชิรวิทย์ ขันติพันธุกุล ชื่อเล่น วิทย์ อายุ 21 ปี ปัจจุบันกำลังศีกษาอยู่ชั้นปีที่ 3 คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี สาขาวิทยาการคอมพิวเตอร์ประยุกต์-มัลติมีเดีย มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี ผมมีความสนใจในการออกแบบและศึกษาการเขียนเว็บไซต์ด้วยภาษา HTML , CSS และยังมีความสนใจในอาชีพด้าน Front-end Developer จึงได้จัดทำแฟ้มรวบรวมผลงานนี้ขึ้นเพื่อใช้ประกอบการยื่นสมัครฝึกงาน</p><br>
-                        <p>Hello, My name is Wachirawit Khantipanthukul  My Nickname is Wit I'm 21 years old. Now I'm studying 3rd year in Bachelor's degree of Applied Computer Science - Multimedia at King Mongkut's University of Technology Thomburi. I'm Interested in Website Edit with HTML , CSS languange And I am interested in Front-end Developer too, So I made this portfolio for an internship</p>
+                        <p>สวัสดีครับ ผมชื่อ วชิรวิทย์ ขันติพันธุกุล ชื่อเล่น วิทย์ อายุ 22 ปี สำเร็จการศึกษาจาก คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี สาขาวิทยาการคอมพิวเตอร์ประยุกต์-มัลติมีเดีย มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี ผมมีความสนใจในการออกแบบและศึกษาการเขียนเว็บไซต์ด้วยภาษา HTML , CSS และยังมีความสนใจในอาชีพด้าน Developer จึงได้จัดทำแฟ้มรวบรวมผลงานนี้ขึ้นเพื่อใช้ประกอบการยื่นสมัครงาน</p><br>
+                        <p>Hello, My name is Wachirawit Khantipanthukul  My Nickname is Wit I'm 22 years old. Now I'm Graduated in Bachelor's degree of Applied Computer Science - Multimedia at King Mongkut's University of Technology Thomburi. I'm Interested in Website Edit with HTML , CSS languange And I am interested in Developer too, Therefore, this portfolio has been created to be used for applying for jobs.</p>
                         <a href="portprofile.html">Read More</a>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
         </section>
     
         <footer>
-            Created by Wachirawit Khantipanthukul | <i class='bx bx-copyright'></i> 2021 all rights reserved
+            Created by Wachirawit Khantipanthukul | <i class='bx bx-copyright'></i> 2023 all rights reserved
         </footer>
     </div>
 
