--- a/portcode.html
+++ b/portcode.html
@@ -38,6 +38,75 @@
 
         <section class="video0" id="video0">
             <div class="max-width">
+                <h1 class="title">Thai Cratbeer Website</h2>
+                    <p>โปรเจคของเว็บไซต์นี้ มีชื่อว่า "คราฟเบียร์ไทย ฝันไกล ไป(ไม่)ถึง" ซึ่งเป็นโปรเจคในการฝึกงานชั้นปีที่ 3
+                        ของบริษัท Punch Up & Wevis สร้างด้วยภาษา HTML, CSS, JS ผ่านทาง Vue JS
+                        Framework, Bootstrap และGithub
+                        โปรเจคนี้มีจุดประสงค์ในการตั้งคำถามของสังคมไทย เกี่ยวกับเรื่องของสุราที่มีข้อจำกัดต่างๆมากมาย ทำให้ชาวบ้าน หรือบุคคลทั่วไปไม่สามารถผลิดสุราจำหน่ายเองได้
+                        รวมถึงมีการกล่าวเรื่อง พรบ.สุราก้าวหน้าที่อาจเป็นตัวแปรสำคัญทำให้คนไทย สามารถผลิตสุราในรูปแบบของคราฟต์เบียร์ได้ ซึ่งไม่เพียงแต่จะทำให้ชาวบ้านหรือเกษตรกรไทยมีรายได้ แต่ยังเป็นการส่งเสริมวัฒนธรรมในเรื่องของคราฟต์เบียร์ให้ไปได้ไกลกว่าเดิม
+                        โดยระยะเวลาในการสร้างโปรเจคใช้เวลาประมาณ 2 เดือน (1 มิถุนายน 2565 - 30 กรกฏาคม 2565)</p>
+                    <h2>Example Interface</h2>
+                    <div class="containerp">
+                        <a class="interncontainer" href="img/pu1.png"><img class="shadow" src="img/pu1.png"></a>
+                        <a class="interncontainer" href="img/pu2.png"><img class="shadow" src="img/pu2.png"></a>
+                    </div>
+                    <div class="containerp">
+                        <a class="interncontainer" href="img/pu3.png"><img class="shadow" src="img/pu3.png"></a>
+                        <a class="interncontainer" href="img/pu4.png" style="margin-bottom: 0;"><img class="shadow"
+                                src="img/pu4.png"></a>
+                    </div>
+                    <a href="https://projects.punchup.world/thaicraftbeer/" target="_blank"><p class="golink1">>>> Link Website <<<</p></a>
+                    <h2>My Duty</h2>
+                    <p>- Front-End Developer</p>
+                    <h2>Create By</h2>
+                    <div class="container-logo">
+                        <div class="imgcontain">
+                            <img src="img/html.png">
+                        </div>
+                        <div class="imgcontain">
+                            <img src="img/css.png">
+                        </div>
+
+                        <div class="imgcontain">
+                            <img src="img/js.png">
+                        </div>
+                    </div>
+                    <div class="container-logo">
+                        <div class="imgcontain">
+                            <img src="img/vue copy.png">
+                        </div>
+                        <div class="imgcontain">
+                            <img src="img/bootstrap copy.png">
+                        </div>
+                        <div class="imgcontain">
+                            <img src="img/github copy.png">
+                        </div>
+                    </div>
+            </div>
+        </section>
+
+        <section class="video0-1" id="video0">
+            <div class="max-width">
+                <h1 class="title">Multimedia Web Promote</h2>
+                    <p>โปรเจคนี้เป็นโปรเจคจบการศึกษาชั้นปีที่ 4 ชื่อโปรเจคนี้คือ "เว็บไซต์พารัลแลกซ์เพื่อประชาสัมพันธ์หลักสูตรวิทยาการคอมพิวเตอร์ประยุกต์-มัลติมีเดีย" โดยมีกลุ่มเป้าหมายคือน้องๆ ม.ปลายที่กำลังสนใจจะศึกษาต่อในสายมัลติมีเดีย 
+                        เนื้อหานี้จะอ้างอิงมาจากเว็บไซต์ของภาควิชาวิทยาการคอมพิวเตอร์ประยุกต์-มัลติมีเดีย มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี โดยเว็บไซต์จะมีลูกเล่นต่างๆตามการเคลื่อนไหวเมาส์ มีเกมเล็กๆน้อยๆให้เล่นเพื่อค้นหาตนเองว่า หากมาเรียนในด้านนี้ จะเหมาะกับสายงานไหน เป็นต้น
+                    </p>
+                    <h2>Example Interface</h2>
+                    <div class="containerp">
+                        <a class="interncontainer" href="img/pr1.png"><img class="shadow" src="img/pr1.png"></a>
+                        <a class="interncontainer" href="img/pr2.png"><img class="shadow" src="img/pr2.png"></a>
+                    </div>
+                    <div class="containerp">
+                        <a class="interncontainer" href="img/pr3.png"><img class="shadow" src="img/pr3.png"></a>
+                        <a class="interncontainer" href="img/pr4.png" style="margin-bottom: 0;"><img class="shadow"
+                                src="img/pr4.png"></a>
+                    </div>
+                    <a href="https://main--relaxed-medovik-659273.netlify.app/" target="_blank"><p class="golink2">>>> Link Website <<<</p></a>
+            </div>
+        </section>
+
+        <section class="video0" id="video0">
+            <div class="max-width">
                 <h1 class="title">Coach Community Website</h2>
                     <p>โปรเจคของเว็บไซต์นี้ มีชื่อว่า Coach Communtity Forums ซึ่งเป็นโปรเจคในการฝึกงานชั้นปีที่ 2
                         ของบริษัท โกลบิช อคาเดเมีย (Globish Academia) สร้างด้วยภาษา HTML, CSS, JS ผ่านทาง Vue JS
@@ -214,7 +283,7 @@
         </section>
 
         <footer>
-            Created by Wachirawit Khantipanthukul | <i class='bx bx-copyright'></i> 2021 all rights reserved
+            Created by Wachirawit Khantipanthukul | <i class='bx bx-copyright'></i> 2023 all rights reserved
         </footer>
     </div>
 
