--- a/portcode.html
+++ b/portcode.html
@@ -102,6 +102,8 @@
                                 src="img/pr4.png"></a>
                     </div>
                     <a href="https://main--relaxed-medovik-659273.netlify.app/" target="_blank"><p class="golink2">>>> Link Website <<<</p></a>
+                    <a href="https://www.figma.com/design/OOp5yItx1hynn5ZFxQQnQm/senior_project?node-id=0-1&t=19QKFMW5nw1hu958-1" target="_blank"><p class="golink2">>>> Link Figma (UX/UI) <<<</p></a>
+
             </div>
         </section>
 
