--- a/portcode.html
+++ b/portcode.html
@@ -36,6 +36,27 @@
             </div>
         </section>
 
+        <section class="fusionsoft" id="video0">
+            <div class="max-width">
+                <h1 class="title">AIP Equipment Tracking </h2>
+                    <p>
+                        โปรเจคนี้เป็นโปรเจคการทำงานที่บริษัท Fusion Soft โดยเป็นระบบที่ทำให้กับสถาบันพยาธิ เพื่อติดตามสิ่งอุปกรณ์ที่ใช้ในสถาบัน เน้นการ Create Update Delete 
+                        ข้อมูล แสดงผลตาราง กรอกฟอร์มเพื่อให้ฝ่ายต่างๆในสถาบันใช้งานได้สะดวกขึ้น เนื่องจากปกติแล้ว การทำงานติดตามสิ่งอุปกรณ์ในสถาบันนั้นมีหลายขึ้นตอน และใช้เอกสารจำนวนมาก โปรเจคนี้จึงทำขึ้นเพื่ออำนวยความสะดวกและลดข้อผิดพลาดจากการทำเอกสารในหลายๆฝ่าย 
+                        และสามารถติดตามเอกสารของแต่ละฝ่ายได้ง่ายขึ้น โปรเจคนี้ใช้ React , TypeScript ในการเขียน และใช้ CSS ของ MUI Framework
+                    </p>
+                    <h2>Example Interface</h2>
+                    <div class="containerp">
+                        <a class="interncontainer" href="img/FUS1.JPG"><img class="shadow" src="img/FUS1.JPG"></a>
+                        <a class="interncontainer" href="img/FUS2.JPG"><img class="shadow" src="img/FUS2.JPG"></a>
+                    </div>
+                    <div class="containerp">
+                        <a class="interncontainer" href="img/FUS3.JPG"><img class="shadow" src="img/FUS3.JPG"></a>
+                        <a class="interncontainer" href="img/FUS4.JPG" style="margin-bottom: 0;"><img class="shadow"
+                                src="img/FUS4.JPG"></a>
+                    </div>
+            </div>
+        </section>
+
         <section class="video0" id="video0">
             <div class="max-width">
                 <h1 class="title">Thai Cratbeer Website</h2>
