--- a/portprofile.html
+++ b/portprofile.html
@@ -16,12 +16,12 @@
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const birthDate = moment("15/10/2000", "DD/MM/YYYY");
-            const today = moment();
-            const age = today.diff(birthDate, 'years');
-            document.getElementById("ages").textContent = `${age}`;
-        });
+      document.addEventListener("DOMContentLoaded", () => {
+        const birthDate = moment("15/10/2000", "DD/MM/YYYY");
+        const today = moment();
+        const age = today.diff(birthDate, "years");
+        document.getElementById("ages").textContent = `${age}`;
+      });
     </script>
     <div class="first">
       <main class="l-main bd-container">
@@ -80,7 +80,8 @@
               <h2 class="section-title">Profile</h2>
 
               <p class="profile__description">
-                สวัสดีครับ ผมชื่อ วชิรวิทย์ ขันติพันธุกุล ชื่อเล่น วิทย์ อายุ <span id="ages"></span>
+                สวัสดีครับ ผมชื่อ วชิรวิทย์ ขันติพันธุกุล ชื่อเล่น วิทย์ อายุ
+                <span id="ages"></span>
                 ปี สำเร็จการศึกษาจาก คณะครุศาสตร์อุตสาหกรรมและเทคโนโลยี
                 สาขาวิทยาการคอมพิวเตอร์ประยุกต์-มัลติมีเดีย
                 มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี
@@ -298,6 +299,48 @@
                                         Indesign และเทคนิคโทนสีที่ใช้ ทั้ง RGB และ CMYK</p>
                                 </div>
                             </div> -->
+
+                <div class="exp__content">
+                  <div class="exp__time">
+                    <span class="exp__rounder"></span>
+                    <span class="exp__line"></span>
+                  </div>
+
+                  <div class="exp__data bd-grid">
+                    <h3 class="exp__title">UX/UI Designer ( Freelance )</h3>
+                    <span class="exp__company"
+                      >From August, 2025</span
+                    >
+                    <p class="exp__description">
+                      สนใจในงาน UX/UI จึงลองงานประเภท Freelance เพื่อฝึกประสบการณ์ฝั่ง design เพื่อนำมาต่อยอดกับสายงาน Frontend 
+                      ร่วมทำโปรเจคกับสถาบันสอนพิเศษ LNC และ ออกแบบเว็บไซต์ให้กับ KK Solar Cell
+                      <br />
+                      ระยะเวลางานตั้งแต่เดือนสิงหาคม ปี 2025
+                    </p>
+                  </div>
+                </div>
+
+                <div class="exp__content">
+                  <div class="exp__time">
+                    <span class="exp__rounder"></span>
+                    <span class="exp__line"></span>
+                  </div>
+
+                  <div class="exp__data bd-grid">
+                    <h3 class="exp__title">Frontend Developer</h3>
+                    <span class="exp__company"
+                      >From Febuary, 2025 | @Fusion Soft Co.</span
+                    >
+                    <p class="exp__description">
+                      ทำงานในบริษัทซอฟต์แวร์เฮาส์ โปรเจค AIP (สถาบันพยาธิ)
+                      ร่วมมือกับทีม Backend โดยใช้ React JS และ Vue JS
+                      เป็นเทคโนโลยีหลัก
+                      <br />
+                      ระยะเวลางานตั้งแต่เดือนกุมภาพันธ์ ปี 2025 ถึงสิงหาคม ปี
+                      2025 (7เดือน)
+                    </p>
+                  </div>
+                </div>
 
                 <div class="exp__content">
                   <div class="exp__time">
