update globish x bma

--- a/portcode.html
+++ b/portcode.html
@@ -36,7 +36,7 @@
             </div>
         </section>
 
-        <section class="fusionsoft" id="video0">
+        <section class="fusionsoft">
             <div class="max-width">
                 <h1 class="title">AIP Equipment Tracking </h2>
                     <p>
@@ -53,6 +53,26 @@
                         <a class="interncontainer" href="img/FUS3.JPG"><img class="shadow" src="img/FUS3.JPG"></a>
                         <a class="interncontainer" href="img/FUS4.JPG" style="margin-bottom: 0;"><img class="shadow"
                                 src="img/FUS4.JPG"></a>
+                    </div>
+            </div>
+        </section>
+
+        <section class="globish">
+            <div class="max-width">
+                <h1 class="title">BMA x GECB Test</h2>
+                    <p>
+                        โปรเจคนี้เป็นโปรเจคการทำงานที่บริษัท Globish ร่วมกับโครงการ BMA ของผู้ว่าชัชชาติ ในปี 2024 เพื่อทดสอบความรู้ความสามารถในด้านภาษาอังกฤษ 
+                        ของครูและนักเรียนในจังหวัดกรุงเทพมหานคร ตามหลักเกณฑ์วัดระดับภาษาอังกฤษตามแบบ CEFR ใช้ Vue JS เป็น Framework และ Typescript เป็นหลัก
+                    </p>
+                    <h2>Example Interface</h2>
+                    <div class="containerp">
+                        <a class="interncontainer" href="img/GB1.PNG"><img class="shadow" src="img/GB1.PNG"></a>
+                        <a class="interncontainer" href="img/GB2.PNG"><img class="shadow" src="img/GB2.PNG"></a>
+                    </div>
+                    <div class="containerp">
+                        <a class="interncontainer" href="img/GB3.PNG"><img class="shadow" src="img/GB3.PNG"></a>
+                        <a class="interncontainer" href="img/GB4.PNG" style="margin-bottom: 0;"><img class="shadow"
+                                src="img/GB4.PNG"></a>
                     </div>
             </div>
         </section>
